fix(db): stop relying on MapDB's cleaner hack for mmap'd index buffers
fileMmapCleanerHackEnable() unmaps eagerly by reflectively calling
DirectByteBuffer.cleaner(), which returns an internal jdk.internal.ref.Cleaner. JDK 16 strongly
encapsulated JDK internals, so on 17 that call throws InaccessibleObjectException unless the JVM
is launched with --add-opens java.base/java.nio=ALL-UNNAMED. MapDB catches the throw and logs it,
so the hack has been silently doing nothing on every run we have made - the exception appears once
at startup in stderr, never in rsk.log, which is why it went unnoticed for so long.

The options were to add the flag or to drop the hack. Dropping it is better:

  - --add-opens is coarse. It opens all of java.nio to every class on the classpath, not to MapDB.
  - It is an escape hatch the platform is progressively closing, so it imports a lifetime risk.
  - It would have to be present in every unit file, container image and launch script, and its
    absence is invisible: one log line, then the node runs on with the hack disabled.

Empirically the hack is not needed. Two full mainnet syncs on a 2-core / 7.6 GB host ran 42-44 h
in exactly this configuration - mmap on, eager unmap silently disabled - and grew from ~5.45 GB to
~5.8 GB RSS before flattening, with ~1.4 GB still available, no OOM and no swap, across roughly
24,000 resource samples. GC-driven release keeps up with the mapping churn.

This makes the measured behaviour the intended behaviour. Note the evidence covers syncing, which
writes the index far harder than following the tip does.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>